samples/_failures_safe/1761630620_d902a3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_311be5b2.c: In function ‘main’:
./samples/SAFE/__tmp_311be5b2.c:151:9: error: expected declaration or statement at end of input
  151 |         matrix_init(&mat1, rows1, cols1);
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_311be5b2.c:151:9: error: expected declaration or statement at end of input
